--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -1,5 +1,36 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+/*
+1rem = 16px
+.75rem = 12px
+.5rem = 8px
+.25rem = 4px
+.0625rem = 1px
+*/
+
+.loading-animation-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+
+.loading-animation {
+  border: .5rem solid #f3f3f3; /* Light grey */
+  border-top: .5rem solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
