--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,21 +1,20 @@
 .App {
+  height: 100vh;
   text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 5rem;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  height: 10rem;
+  padding: 1.25rem;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 .App-intro {
