--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -14,11 +14,10 @@ body {
 
 .loading-animation-container {
   display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
 }
 
 .loading-animation {
