--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,8 @@
 .App {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  min-height: 100vh;
   text-align: center;
 }
 
