--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -24,6 +24,10 @@
   font-size: large;
 }
 
+.App-nav-link {
+  padding-right: 5px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
