--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -29,6 +29,10 @@ body {
   animation: spin 2s linear infinite;
 }
 
+.Nav-bar .link {
+  margin-right: .625rem;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
