--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -30,7 +30,14 @@ body {
 }
 
 .Mana-gem {
-  font-size: .625rem;
+  display: flex;
+  justify-content: center;
+  font-size: .3125rem;
+  border-radius: 45%;
+  height: 20px;
+  width: 20px;
+  line-height: .625rem;
+  padding: 0;
 }
 
 @keyframes spin {
