--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -34,8 +34,8 @@ body {
   justify-content: center;
   font-size: .3125rem;
   border-radius: 45%;
-  height: 20px;
-  width: 20px;
+  height: 1.25rem;
+  width: 1.25rem;
   line-height: .625rem;
   padding: 0;
 }
