--- a/src/components/Collection/Collection.css
+++ b/src/components/Collection/Collection.css
@@ -7,6 +7,10 @@
 
 .Collection-body {
   display: flex;
+  align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: .625rem;
+  height: 42.5rem;
+  overflow: scroll;
 }
