--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,8 +1,6 @@
 .Nav-bar {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
-.Nav-link {
-  margin-right: .3125rem;
-}
+.Nav-link {}
