--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -32,14 +32,26 @@ body {
 .App-card {}
 
 .Mana-gem {
+  filter: saturate(0) opacity(.6);
+}
+
+.Mana-gem:hover {
+  filter: saturate(1) opacity(1);
+  cursor: pointer;
+}
+
+.Mana-gem-nav-img {
+  height: 1.875rem;
+}
+
+.Mana-gem-nav-text {
+  filter: saturate(1) opacity(1);
   display: flex;
-  justify-content: center;
-  font-size: .3125rem;
-  border-radius: 45%;
-  height: 1.25rem;
-  width: 1.25rem;
-  line-height: .625rem;
-  padding: 0;
+  margin-top: -1.625rem;
+  margin-left: .6875rem;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 @keyframes spin {
