--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,12 @@
-.Nav-bar {
+.Nav-bar {}
+
+.Nav-bar-list {
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
 }
 
-.Nav-item {}
+.Nav-item {
+  display: inline;
+}
