styles and organizing

--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -31,6 +31,15 @@ body {
 
 .App-card {}
 
+.App-card:hover {
+  cursor: pointer;
+}
+
+.App-card img {
+  position: relative;
+  height: 100%;
+}
+
 .Mana-gem {
   filter: saturate(0) opacity(.6);
 }
