--- a/src/components/Collection/Collection.css
+++ b/src/components/Collection/Collection.css
@@ -3,15 +3,15 @@
 .Collection-body {
   position: relative;
   margin-top: .625rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   height: 34.375rem;
   overflow: hidden;
-  border: .0625rem solid black;
-  background-color: #e0e0e0;
   border-radius: .3125rem;
-  box-shadow: 5px 10px 20px #888888;
+  background-color: rgb(235, 235, 235);
 }
 
 .Collection-body-nav-button {
@@ -29,6 +29,7 @@
   justify-content: center;
   height: 100%;
   filter: opacity(.05);
+  color: #000000;
 }
 
 .Collection-body-nav-button-icon.active {
@@ -45,7 +46,7 @@
 }
 
 .Collection-card {
-  height: 17.5rem;
+  height: 17.1875rem;
   padding: .3125rem;
 }
 
@@ -57,6 +58,6 @@
 .Collection-mana-bar {
   padding: .625rem;
   background-color: rgb(235, 235, 235);
-  border-radius: .625rem;
+  border-radius: .3125rem;
   width: 18.75rem;
 }
