--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -41,6 +41,15 @@ body {
   height: 100%;
 }
 
+.App-card-detail {
+  width: 40rem;
+  height: 25rem;
+}
+
+.App-modal {}
+
+.App-modal-container {}
+
 .Mana-gem {
   filter: saturate(0) opacity(.6);
 }
