Feature/card detail (#7)
* styles and organizing

* modal functionality

* card details modal progress

* adding unit tests

* coverage 100, all tests green

--- a/src/common/assets/css/index.css
+++ b/src/common/assets/css/index.css
@@ -31,6 +31,25 @@ body {
 
 .App-card {}
 
+.App-card:hover {
+  cursor: pointer;
+}
+
+.App-card img {
+  background: transparent;
+  position: relative;
+  height: 100%;
+}
+
+.App-card-detail {
+  width: 40rem;
+  height: 25rem;
+}
+
+.App-modal {}
+
+.App-modal-container {}
+
 .Mana-gem {
   filter: saturate(0) opacity(.6);
 }
