--- a/src/components/Collection/Collection.css
+++ b/src/components/Collection/Collection.css
@@ -1,4 +1,18 @@
-.Collection {}
+.Collection {
+  margin-top: 1.25rem;
+}
+
+.Collection img:hover {
+  cursor: pointer;
+}
+
+.Collection-align-left {
+  left: 0;
+}
+
+.Collection-align-right {
+  right: 0;
+}
 
 .Collection-body {
   position: relative;
@@ -37,22 +51,18 @@
   cursor: pointer;
 }
 
-.Collection-align-left {
-  left: 0;
-}
-
-.Collection-align-right {
-  right: 0;
-}
-
 .Collection-card {
   height: 17.1875rem;
   padding: .3125rem;
 }
 
+.Collection-footer {
+  margin-top: 1.25rem;
+}
+
 .Collection-header {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .Collection-mana-bar {
@@ -63,13 +73,9 @@
 }
 
 .Collection-play-style {
-  margin-left: .625rem
+  margin-right: .625rem
 }
 
 .Collection-play-style img {
   height: 2.8125rem;
-}
-
-.Collection img:hover {
-  cursor: pointer;
 }
